[package]
name = "meteora-fee-router"
version = "0.1.0"
description = "Meteora Fee Router - Honorary DAMM V2 LP position fee distribution system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meteora_fee_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.16.25"

# Additional utility crates
bytemuck = "1.13.1"
thiserror = "1.0.40"