[package]
name = "meteora-fee-router"
version = "1.1.0"
description = "Meteora Fee Router - Honorary DAMM V2 LP position fee distribution system - DEPLOYED TO DEVNET"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "meteora_fee_router"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

# Additional utility crates
bytemuck = "1.13.1"
thiserror = "1.0.40"